[package]
name = "mimxrt600-fcb"
version = "0.1.0"
authors = [ "Felipe Balbi <felipe@balbi.sh>" ]
edition = "2021"
license = "MIT"
description = "Flash Configuration Block for MIMXRT600 devices"
repository = "https://github.com/felipebalbi/mimxrt600-fcb"
readme = "README.md"
keywords = [ "rt6", "mimxrt", "mimxrt6", "no_std", "embedded" ]
categories = [ "embedded", "no-std" ]
rust-version = "1.75"

[dependencies]
bitfield = "0.15.0"
